testsuite/bsc.typechecker/context-errors/AmbigCtxExplTruncateExtend.bsv.bsc-out.expected
checking package dependencies
compiling AmbigCtxExplTruncateExtend.bsv
Error: "AmbigCtxExplTruncateExtend.bsv", line 3, column 13: (T0035)
  Bit vector of unknown size introduced near this location.
  Please remove unnecessary extensions, truncations and concatenations and/or
  provide more type information to resolve this ambiguity.
