testsuite/bsc.typechecker/context-errors/AmbigCtxExplTruncateExtend.bsv
Bit#(8) y = 0;

Bit#(8) x = truncate( zeroExtend (y) );

